# SolutionPortfolio

./: .gitignore  ABOUT_FILES.md  ARCHITECTURE.md  README.md
AISolutions/Refinery Synthetic Data/Phase-1-Cdu-Prototype/: .gitignore  HANDOFF.md  RSD_BRIEF.md  USER_MANUAL.md  pyproject.toml
AISolutions/Refinery Synthetic Data/Phase-1-Cdu-Prototype/config/: lab_panel.yaml
AISolutions/Refinery Synthetic Data/Phase-1-Cdu-Prototype/examples/examples/: detect_fault.py
AISolutions/Refinery Synthetic Data/Phase-1-Cdu-Prototype/src/rsd/: __init__.py  ground_truth.py  lims.py  physics.py  realism.py  schemas.py
AISolutions/Refinery Synthetic Data/Phase-1-Cdu-Prototype/tests/: test_detect_fault.py  test_generate.py  test_ground_truth.py  test_realism.py
AISolutions/Refinery Synthetic Data/Phase-1-Cdu-Prototype/tests/acceptance/: test_determinism.py  test_fault_recoverable.py
AISolutions/RefineryTwin/: .gitignore  README.md
AISolutions/RefineryTwin/docs/: ENVIRONMENT_SPEC.md  OPERATOR_RUNBOOK.md  PHASE1_DESIGN.md
AISolutions/RefineryTwin/docs/charter/: BACKLOG_PHASE_0.md  CLAUDE_CODE_AGREEMENT.md  CLOUD_RUNBOOK_DAY_1.md  GIT_WORKFLOW.md  PROJECT_CHARTER.md  README.md  ROADMAP.md
config/: asset_hierarchy.yaml  default.yaml  scenarios.yaml  tags.yaml
examples/: detect_fault.py
src/rsd/: config.py  generate.py  scenario.py
tests/: test_config.py  test_lims.py  test_physics.py  test_realism.py  test_scenario.py
tests/acceptance/: test_full_pipeline.py  test_schemas.py
