[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsd"
version = "0.1.0"
description = "Refinery Synthetic Data Generator (CDU mock)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "RSD Builder" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15",
    "pydantic>=2.6",
    "pyyaml>=6",
    "scipy>=1.11",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "mypy>=1.10",
    "hypothesis>=6.100",
    "pandas-stubs",
    "types-PyYAML",
]

[project.scripts]
rsd-generate = "rsd.generate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["scipy.*", "pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
